<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:orientation="vertical"
    	android:layout_width="match_parent"
    	android:layout_height="match_parent" >

        <TextView
          	android:id="@+id/tvTemple"
           	android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text=""
           	android:textSize="30sp" />

      <TextView
         android:labelFor="@+id/tv_navi"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:text="@string/tv_navi" />

<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal" >

    <TextView
         android:labelFor="@+id/tv_honson"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:text="@string/tv_honson" />

	<EditText
        android:id="@+id/et_honson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:inputType="text" />
</LinearLayout>

<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal" >

    <TextView
         android:labelFor="@+id/tv_syusi"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:text="@string/tv_syusi" />

	<EditText
        android:id="@+id/et_syusi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:inputType="text" />
</LinearLayout>

<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal" >

    <TextView
         android:labelFor="@+id/tv_syozai"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:text="@string/tv_syozai" />

	<EditText
        android:id="@+id/et_syozai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:inputType="text" />
</LinearLayout>

<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal" >

    <TextView
         android:labelFor="@+id/url"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:text="@string/tv_url" />

	<EditText
        android:id="@+id/et_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:inputType="textUri" />
</LinearLayout>

<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal" >

    <TextView
         android:labelFor="@+id/tv_content"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:text="@string/tv_content" />

        <EditText
            android:id="@+id/etContent"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="top"
            android:inputType="textMultiLine" />

</LinearLayout>

<Button
				android:id="@+id/btnSave"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/btn_save"
           	android:textSize="25sp" />

</LinearLayout>